# alisgogo

./: .dockerignore  Dockerfile  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
contract/: package-lock.json
contract/migrations/: deploy.ts
contract/programs/marketplace/: Cargo.toml
contract/programs/marketplace/src/: lib.rs
src/app/components/: FeaturedCollections.tsx
src/app/components/ui-landing/: l-categories.tsx  l-collectandauct.tsx  l-faq.tsx  l-footer.tsx  l-hero.tsx  l-newestsouvenirs.tsx  l-whychooseus.tsx
src/app/marketplace/: a.json  page.tsx
src/app/marketplace/components/: DisplayListings.tsx
src/app/studio/account/components/: TokenModal.tsx
src/app/studio/mint/: page.tsx
src/app/studio/mynft/[assetId]/: page.tsx
src/components/: ImageDropzone.tsx
